@@ -1,0 +1,35 @@
+# Copyright 2021 Free Software Foundation, Inc.
+
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.  */
+
+# Regression test for expression evaluation of address space qualifiers
+# in C and C++.
+
+gdb_exit
+gdb_start
+gdb_reinitialize_dir $srcdir/$subdir
+
+gdb_test_no_output "set language c"
+
+with_test_prefix "C" {
+	gdb_test "p *(@somerandomqualifiername int *) 0x12345678" \
+		"Unknown address space specifier: \"somerandomqualifiername\""
+}
+
+gdb_test_no_output "set language c++"
+
+with_test_prefix "C++" {
+	gdb_test "p *(@somerandomqualifiername int *) 0x12345678" \
+		"Unknown address space specifier: \"somerandomqualifiername\""
+}
