@@ -1,3 +1,7 @@
+2021-04-20  Felix Willgerodt  <felix.willgerodt@intel.com>
+
+	* gdb.base/address_space_qualifier.exp: New file.
+
 2021-04-14  Tankut Baris Aktemur  <tankut.baris.aktemur@intel.com>
 
 	* gdb.dwarf2/dw2-inline-with-lexical-scope.exp: Use
